Add typescript support, connecting to real api server, add report list directive.

--- a/app/src/demos/designer.html
+++ b/app/src/demos/designer.html
@@ -6,6 +6,10 @@
     修改
 </a>
 
+<a ui-sref="designer.demo.list" class="btn btn-info">
+    列表
+</a>
+
 <script type="text/ng-template" id="designer-edit.html">
     edit
 </script>
